--- a/conf.env
+++ b/conf.env
@@ -1,3 +1,7 @@
 app_name="barafiri-documentation"
 port=":8112"
 host_address="http://localhost"
+anchor_cert_file="/etc/letsencrypt/live/anchorstech.com/fullchain.pem"
+anchor_key_file="/etc/letsencrypt/live/anchorstech.com/privkey.pem"
+secured_connection="true"
+devpro="true"
